--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <header class="jumbotron">
   <div class="inner">
     <div class="container">
-      <h1 style="letter-spacing:-3px; margin-bottom:20px;">Where do I start?</h1>
+      <h1 style="letter-spacing:-3px; margin-bottom:20px;">Elitify Test App</h1>
       <p class="lead">An <strong>intro</strong> to using the Shopify App Template<br/>
       including information on the <strong>Shopify API</strong> and <strong>Bootstrap,</strong><br/>
       just to get the ball rolling.</p>
