--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
     </div>
     
     <footer>
-      <p>A Shopify app by (company name here)</p>
+      <p>A Shopify app by Jeronone Technologies</p>
     </footer>
     
   </div> <!-- /container -->
