--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,8 @@
 
   <div class="span8 offset1"> 
     <h2>New Products</h2>
-    
+    <%= @products.inspect %>
+	<br />
     <div class="accordion" id="accordion">      
       
       <% if @products.blank? %>
