--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -94,7 +94,7 @@
                 
               <% if !product.variants.empty? %>
 					  <%  product.variants.each_with_index do |variant, index2| %>
-					 
+					  <%= variant.title %>
 					  <% end %>
 			  <% end %>
                 <p><%= link_to raw('View in your Shopify Admin <i class="icon-chevron-right" style="opacity:.25"></i>'), "https://#{shop_session.url}/admin/products/#{product.id}", :target => 'blank', :class => 'btn btn-primary' %></p>
