--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -93,8 +93,10 @@
                 <% end %>
                 
               <% if !product.variants.empty? %>
+				<h4>Variants For this product</h4>
 					  <%  product.variants.each_with_index do |variant, index2| %>
-					  <%= variant.title %>
+					   <p><%= variant.title %></p>
+					  <br />
 					  <% end %>
 			  <% end %>
                 <p><%= link_to raw('View in your Shopify Admin <i class="icon-chevron-right" style="opacity:.25"></i>'), "https://#{shop_session.url}/admin/products/#{product.id}", :target => 'blank', :class => 'btn btn-primary' %></p>
