--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,6 +87,10 @@
               <div class="accordion-inner">
                 
                 <% if !product.images.empty? %>
+				<h4>Current Images for this product</h4>
+				<% product.images.each_with_index do | img, index1| %>
+					<%= link_to image_tag(img), '#modal-'+product.id.to_s, :'data-toggle' => 'modal' %>
+				<% end %>
                   <div class="polaroid">
                     <%= link_to image_tag(product.images.first.medium), '#modal-'+product.id.to_s, :'data-toggle' => 'modal' %>
                   </div>
