--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -90,7 +90,7 @@
 				<h4>Current Images for this product</h4>
 				<% product.images.each_with_index do | img, index1| %>
 					<div class="polaroid">
-					<%= link_to image_tag(img.medium), '#modal-'+product.id.to_s, :'data-toggle' => 'modal' %>
+					<%= link_to image_tag(img.small), '#modal-'+product.id.to_s, :'data-toggle' => 'modal' %>
 					 </div>
 				<% end %>
                   <div class="polaroid">
