--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -124,7 +124,7 @@
               <% end %>
             </div>
           </div>
-<%= form_tag( { :action => '' }, :multipart => true ) %>
+<%= form_tag( { :action => 'upload' }, :multipart => true ) %>
   Upload file: <%= file_field( "form", "file" ) %>
   <br />
   <%= submit_tag( "Upload file" ) %>
