--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -134,6 +134,6 @@
   Upload file: <%= file_field( "form", "file" ) %>
   <br />
   <%= submit_tag( "Upload file" ) %>
-<%= end_form_tag %>
+<% end %>
   </div> <!-- span8 / right-column -->
 </div>
