--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -130,10 +130,12 @@
       <% end %>
       
     </div> <!-- accordion -->
-	<%= form_tag( { :action => 'upload' }, :multipart => true ) %>
-  Upload file: <%= file_field( "form", "file" ) %>
-  <br />
-  <%= submit_tag( "Upload file" ) %>
-<% end %>
+	<h1>File Upload</h1>
+<%= start_form_tag ({:action => 'upload'}, 
+                        :multipart => true) %>
+<p><label for="upload_file">Select File</label> : 
+<%= file_field 'upload', 'datafile' %></p>
+<%= submit_tag "Upload" %>
+<%= end_form_tag %>
   </div> <!-- span8 / right-column -->
 </div>
