--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -131,7 +131,12 @@
       
     </div> <!-- accordion -->
 	<h1>File Upload</h1>
-<%= form_tag("upload", method: "get") do %>
+<%= form_tag({:action => :upload}, :multipart => true) do %>
+<p><label for="upload_file">Select File</label> : 
+<%= file_field 'upload', 'datafile' %></p>
+<%= submit_tag "Upload" %>
+<% end %>
+<%= form_tag("/search", method: "get") do %>
   <%= label_tag(:q, "Search for:") %>
   <%= text_field_tag(:q) %>
   <%= submit_tag("Search") %>
