--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -133,7 +133,7 @@
 	<h1>File Upload</h1>
 <%= form_tag({:action => :upload}, :multipart => true) do %>
 <p><label for="upload_file">Select File</label> : 
-<%= file_field 'datafile' %></p>
+<%= file_field 'upload', 'datafile' %></p>
 <%= submit_tag "Upload" %>
 <% end %>
   </div> <!-- span8 / right-column -->
