--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -134,6 +134,7 @@
 <%= form_tag({:action => :upload}, :multipart => true) do %>
 <p><label for="upload_file">Select File</label> : 
 <%= file_field 'upload', 'datafile' %></p>
+<%= image_tag 'untitled2.png' %>
 <%= submit_tag "Upload" %>
 <% end %>
   </div> <!-- span8 / right-column -->
