--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,11 +87,9 @@
             <div id="<%= product.id %>" class="accordion-body collapse <% if index == 1 %>in<% end %>">
               <div class="accordion-inner">
                 	<h1>File Upload</h1>
-<%= form_tag({:action => :upload, :id => @product.id}, :multipart => true) do %>
-<p><label for="upload_file">Select File</label> : 
-<%= file_field 'upload', 'datafile' %></p>
-<%= image_tag 'Untitled2.png' %>
-<%= submit_tag "Upload" %>
+<%= form_for(:product, :url => {:action => 'upload', :id => @product.id}, :html => {:multipart => true}) do |f| %>
+<%= f.file_field(:product_image) %>
+<%= submit_tag('Upload') %>
 <% end %>
                 <% if !product.images.empty? %>
 				<h4>Current Images for this product</h4>
