--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -86,7 +86,6 @@
         
             <div id="<%= product.id %>" class="accordion-body collapse <% if index == 1 %>in<% end %>">
               <div class="accordion-inner">
-                	<h1>File Upload</h1>
 <%= form_for(:product, :url => {:action => 'upload', :id => product.id}, :html => {:multipart => true}) do |f| %>
 <%= f.file_field(:product_image) %>
 <%= submit_tag('Upload') %>
@@ -107,7 +106,10 @@
 				<h4>Variants For this product</h4>
 					  <%  product.variants.each_with_index do |variant, index2| %>
 					   <p><%= variant.title %></p>
-					
+					<%= form_for(:product, :url => {:action => 'upload', :id => product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
+<%= f.file_field(:product_image) %>
+<%= submit_tag('Upload') %>
+<% end %>
 					  <br />
 					  <% end %>
 			  <% end %>
