--- a/app/views/home/upload.html.erb
+++ b/app/views/home/upload.html.erb
@@ -1,4 +1,4 @@
-<%= @arr.attributes.inspect %>
- <%  @arr.each_with_index do |ar, index| %>
 
+ <%  @arr.each_with_index do |ar, index| %>
+<%= @arr.id %>
  <% end %>
