--- a/app/views/home/upload.html.erb
+++ b/app/views/home/upload.html.erb
@@ -1,3 +1,4 @@
-<%  @arr.each_with_index do |ar, index| %>
-<%= ar.id %>
+
+ <%  @arr.each_with_index do |ar, index| %>
+<%= ar.inspect %>
  <% end %>
