--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -133,6 +133,10 @@
       <% end %>
       
     </div> <!-- accordion -->
-
+<%= form_for(:post) do |f| %>
+<%= f.hidden_field(:picture_cache)%>
+<%= f.file_field(:picture) %>
+<%= submit_tag('Upload') %>
+<% end %>
   </div> <!-- span8 / right-column -->
 </div>
