--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -138,11 +138,12 @@
 
 
 
-<%= form_tag(upload, :method => :post) do  %>
+					<%= form_for(:product, :url => {:action => 'upload', :id => product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
   <%= cl_image_upload_tag(:image_id, :crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %>
     
-<%= end %>
+<% end %>
+<% end %>
 
 
 
