--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -138,7 +138,7 @@
 
 
 
-	<%= form_for(:url => {:action => 'upload', :id => product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
+	<%= form_for(:url => {:action => 'upload'}, :html => {:multipart => true}) do |f| %>
   
     <% end %>
   </div> <!-- span8 / right-column -->
