--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-
+<%= cloudinary_js_config %>
 <header class="jumbotron">
   <div class="inner">
     <div class="container">
@@ -140,7 +140,19 @@
   <%= cl_image_upload_tag(:image_id) %>
     ...
 <% end %>
+<div class='preview'></div>
 
 
 	</div> <!-- span8 / right-column -->
 </div>
+<script type="text/javascript">
+$('.cloudinary-fileupload').bind('cloudinarydone', function(e, data) {  
+  $('.preview').html(
+    $.cloudinary.image(data.result.public_id, 
+      { format: data.result.format, version: data.result.version, 
+        crop: 'fill', width: 150, height: 100 })
+  );    
+  $('.image_public_id').val(data.result.public_id);    
+  return true;
+});
+</script>
