--- a/app/assets/stylesheets/shopify_app.css.scss
+++ b/app/assets/stylesheets/shopify_app.css.scss
@@ -147,4 +147,10 @@ h1,h2 { letter-spacing:-1px;}
   .jumbotron h1,.jumbotron p { margin-right: 0;}}
 @media (min-width: 768px) and (max-width: 940px) {
   .jumbotron h1 { font-size: 72px;}}
+  
+.progress_bar
+{
+height:20px;
+background:#eee;
+}
 
