--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -137,7 +137,7 @@
 
 
 <%= form_tag('upload', :method => :post) do  %>
-  <%= cl_image_upload_tag(:image_id) %>
+  <%= cl_image_upload_tag("ruchi-testing-name") %>
     ...
 <% end %>
 <div class='preview'></div>
