--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -103,10 +103,10 @@
 				<h4>Variants For this product</h4>
 					  <%  product.variants.each_with_index do |variant, index2| %>
 					   <p><%= variant.title %></p>
-					   Cloudinary::Uploader.destroy('ruchi_test123')
-					<%= cl_image_upload_tag(:image_id, :public_id=>"#{variant.title}-#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
+
+					<%= cl_image_upload_tag(:image_id, :invalidate=>true,:public_id=>"#{variant.title}-#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %>
-					  
+
 					  <% end %>
 					  </div><!-- variants-section-->
 			  <% end %>
