--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -99,7 +99,7 @@
                 <% end %>
                 
               <% if !product.variants.empty? %>
-			  <div class='variants-section' style='clear:both'>
+			  <div class='variants-section' style='float:left'>
 				<h4>Variants For this product</h4>
 					  <%  product.variants.each_with_index do |variant, index2| %>
 					   <p><%= variant.title %></p>
@@ -109,7 +109,7 @@
 <%= submit_tag('Upload') %>
 <% end %>	  
 				</div>
-				<div class='swatch-section' style='clear:both'>
+				<div class='swatch-section' style='float:right'>
 					<h4>Swatch Image for this variant</h4>
 					<%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.title}-#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %>
