--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -102,9 +102,9 @@
 			  
 				<h4>Variants For this product</h4>
 					  <%  product.variants.each_with_index do |variant, index2| %>
-					   
+					    <h3 style="clear:both"><%= variant.title %></h3>
 					   <div class='variants-section' style='float:left;clear:left'>
-					   <h3><%= variant.title %></h3>
+					  
 					   <h4>Variant Image for this product</h4>
 					<%= form_for(:product, :url => {:action => 'upload', :id => product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
 <%= f.file_field(:product_image) %>
