--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -120,7 +120,7 @@
 					  <% end %>
 					  
 			  <% end %>
-                <p><%= link_to raw('View in your Shopify Admin <i class="icon-chevron-right" style="opacity:.25"></i>'), "https://#{shop_session.url}/admin/products/#{product.id}", :target => 'blank', :class => 'btn btn-primary' %></p>
+                <p style="clear:both"><%= link_to raw('View in your Shopify Admin <i class="icon-chevron-right" style="opacity:.25"></i>'), "https://#{shop_session.url}/admin/products/#{product.id}", :target => 'blank', :class => 'btn btn-primary' %></p>
               </div>
               
             </div>
