--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -84,7 +84,7 @@
               </a>
             </div>
         
-            <div id="<%= @product.id %>" class="accordion-body collapse <% if index == 1 %>in<% end %>">
+            <div id="<%= @product.id %>" class="accordion-body collapse">
               <div class="accordion-inner">
 
                 <% if !@product.images.empty? %>
