--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -96,6 +96,8 @@
 					  <%  @product.variants.each_with_index do |variant, index2| %>
 					  <%= variant.inspect %>
 					  <%= variant.option1 %>
+					  <%= variant.option2 %>
+					  <%= variant.option3 %>
 					    <h3 style="clear:both"><%= variant.title %></h3>
 					   <div class='variants-section' style='float:left;clear:left'>
 					  
