--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -101,7 +101,7 @@
 				</thead>
 				<tbody>
 				<%  @product.variants.each_with_index do |variant, index2| %>
-				<td><%= index %></td>
+				<td><%= index2 %></td>
 				<td><%= variant.option1 %></td>
 				<td><%= variant.option2 %></td>
 				<td><%= variant.option3 %></td>
