--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -87,7 +87,7 @@
             <div id="<%= @product.id %>" class="accordion-body collapse">
               <div class="accordion-inner">
 
-               <%= @metafields %>
+               <%= @metafields.value %>
                 
               <% if !@product.variants.empty? %>
 			  
