--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -112,9 +112,9 @@
 				</table>
 				 <% if !product.images.empty? %>
 				<h4>Current Images for this product</h4>
-				<% product.images.each_with_index do | img, index1| %>
+				<% @product.images.each_with_index do | img, index1| %>
 					<div class="polaroid">
-					<%= link_to image_tag(img.small), '#modal-'+product.id.to_s, :'data-toggle' => 'modal' %>
+					<%= link_to image_tag(img.small), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
 					 </div>
 				<% end %>
                   
