--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -110,7 +110,7 @@
 				<% end %>
 				</tbody>
 				</table>
-				 <% if !product.images.empty? %>
+				 <% if !@product.images.empty? %>
 				<h4>Current Images for this product</h4>
 				<% @product.images.each_with_index do | img, index1| %>
 					<div class="polaroid">
