--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -108,7 +108,7 @@
 				<td><%= variant.option3 %></td>
 				<td>  <% if !@product.images.empty? %>
 				<% @product.images.each_with_index do | img, index1| %>
-					<%= img.inspect %>
+					<%= img.small %>
 				<% end %>
                   
                 <% end %></td>
