--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -67,7 +67,8 @@
 				<td>  <% if !@product.images.empty? %>
 				<% @product.images.each_with_index do | img, index1| %>
 					<% if img.small.include?(variant.title) %>
-					<%= img.small %>
+				<%= link_to image_tag(img.small), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
+
 					<% end %>
 				<% end %>
                   
