--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -74,8 +74,8 @@
                   
                 <% end %></td>
 				<td>
-				<%= form_for(:@product, :url => {:action => 'upload', :id => @product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
-				<%= f.file_field(:@product_image) %>
+				<%= form_for(:product, :url => {:action => 'upload', :id => @product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
+				<%= f.file_field(:product_image) %>
 				<%= submit_tag('Upload') %>
 				<% end %>
 				</td>
