--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -67,9 +67,11 @@
 				<td>  <% if !@product.images.empty? %>
 				<% @product.images.each_with_index do | img, index1| %>
 					<% if img.small.include?(variant.title) %>
-				<%= link_to image_tag(img.small), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
-
+					 <% if img.small.include?(variant.id) %>
+						<% @testvar = img.small >
+					 <% end %>
 					<% end %>
+				<%= link_to image_tag(@testvar), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
 				<% end %>
                   
                 <% end %></td>
