--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -69,7 +69,7 @@
 					<% if img.small.include?(variant.title) %>
 						<% @testvar = img.small %>
 					 <% end %>
-					<% if !@testvar.empty? %>
+					<% if @testvar %>
 				<%= link_to image_tag(@testvar), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
 				  <% end %>
 				<% end %>
