--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -71,7 +71,7 @@
 					 <% end %>
 					<% if @testvar %>
 				<%= link_to image_tag(@testvar), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
-				  @testvar=nil
+				  <% @testvar=nil %>
 				  <% end %>
 				<% end %>
                   
