--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -68,6 +68,7 @@
 				<% @product.images.each_with_index do | img, index1| %>
 					<% if img.small.include?(variant.title) %>
 						<% @testvar = img.small %>
+						<% @imgid= img.id %>
 					 <% end %>
 					
 				<% end %>
@@ -77,6 +78,8 @@
 				<%= link_to image_tag(@testvar), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
 				  <% @testvar=nil %>
 				  <% end %>
+				  <a href='/delete?id='+@product.id+'imgid='+@imgid>Delete</a>
+				  <% @imgid=nil %>
 				</td>
 				<td>
 				<%= form_for(:product, :url => {:action => 'upload', :id => @product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
