--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -53,6 +53,7 @@
 				<th>Option2</th>
 				<th>Option3</th>
 				<th>Current Variant Image</th>
+				<th>Delete</th>
 				<th>Upload Variant Image</th>
 				<th>Current Swatch Image</th>
 				<th>Upload Swatch Image</th>
@@ -78,9 +79,11 @@
 				<%= link_to image_tag(@testvar), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
 				  <% @testvar=nil %>
 				  <% end %>
-				  <a href='/delete?id='+@product.id+'imgid='+@imgid>Delete</a>
-				  <% @imgid=nil %>
+				
+				  
 				</td>
+				<td><a href="/delete?id=@product.id&imgid=@imgid">Delete</a></td>
+				<% @imgid=nil %>
 				<td>
 				<%= form_for(:product, :url => {:action => 'upload', :id => @product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
 				<%= f.file_field(:product_image) %>
