--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -82,7 +82,8 @@
 				
 				  
 				</td>
-				<td><a href="/delete?id=#{@product.id}&imgid={@imgid}">Delete</a></td>
+				<td>
+				link_to "Clickme", url_for(:controller => "home", :action => "destroy", :foo => "1", :bar => "2")
 				<% @imgid=nil %>
 				<td>
 				<%= form_for(:product, :url => {:action => 'upload', :id => @product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
