--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -77,14 +77,17 @@
                 <% end %>
 				<% if @testvar %>
 				<%= link_to image_tag(@testvar), '#modal-'+@product.id.to_s, :'data-toggle' => 'modal' %>
-				  <% @testvar=nil %>
+				  
 				  <% end %>
 				
 				  
 				</td>
 				<td>
+				<% if @testvar %>
 				<%= link_to "Delete", url_for(:controller => "home", :action => "destroy", :id => @product.id, :imgid => @imgid) %>
 				<% @imgid=nil %>
+				<% @testvar=nil %>
+				<% end %>
 				<td>
 				<%= form_for(:product, :url => {:action => 'upload', :id => @product.id, :vid =>variant.id ,:vtitle=>variant.title}, :html => {:multipart => true}) do |f| %>
 				<%= f.file_field(:product_image) %>
