--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -68,6 +68,8 @@
 				<td><%= variant.option3 %></td>
 				<td>  <% if !@product.images.empty? %>
 				<% @product.images.each_with_index do | img, index1| %>
+				<%= img.small %>
+				<%= variant.title %>
 					<% if img.small.include?(variant.title) %>
 						<% @testvar = img.small %>
 						<% @imgid= img.id %>
