--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -99,7 +99,7 @@
 				<td>
 				
 
-<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80) %>
+<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80,:alt =>'test') %>
 				</td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %></td>
