--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -98,7 +98,7 @@
 				</td>
 				<td>
 				
-			<% if FileTest.exist?("http://res.cloudinary.com/jeronone-technologies/image/upload/#{variant.id}.png")%>
+			<% if FileTest.exist?("http://res.cloudinary.com/jeronone-technologies/image/upload/v1401774843/719879701.png")%>
 			exists
 			<% else %>
 			no
