--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -97,13 +97,7 @@
 				<% end %>
 				</td>
 				<td>
-				
-			<% if FileTest.exist?("http://res.cloudinary.com/jeronone-technologies/image/upload/v1401774843/719879701.png")%>
-			exists
-			<% else %>
-			no
-			<% end %>
-<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80,:alt =>'test') %>
+				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80,:alt =>'test', :onError=>this.remove()) %>
 				</td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %></td>
