--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -97,12 +97,12 @@
 				<% end %>
 				</td>
 				<td>
-				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80,:alt =>'test', :onerror=>'this.remove()') %>
+				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :onerror=>'this.remove()') %>
 				</td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %></td>
 			    <td>
-				<%= link_to "Delete2", url_for(:controller => "home", :action => "destroyC", :vid => variant.id, :vtitle => variant.title,:pid=>@product.id) %>
+				<%= link_to "Delete2", id: variant.id, url_for(:controller => "home", :action => "destroyC", :vid => variant.id, :vtitle => variant.title,:pid=>@product.id) %>
 				</td>
 				</tr>
 				<% end %>
