--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -102,7 +102,7 @@
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %></td>
 			    <td>
-				<%= link_to "Delete2", id: variant.id, url_for(:controller => "home", :action => "destroyC", :vid => variant.id, :vtitle => variant.title,:pid=>@product.id) %>
+				<%= link_to "Delete2", id: 'variant.id', url_for(:controller => "home", :action => "destroyC", :vid => variant.id, :vtitle => variant.title,:pid=>@product.id) %>
 				</td>
 				</tr>
 				<% end %>
