--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -97,7 +97,8 @@
 				<% end %>
 				</td>
 				<td>
-				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :onerror=>'this.remove();#delete-#{variant.id}.remove()') %>
+				<% @deletevar= "$(#delete-#{variant.id}).remove()" %>
+				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :onerror=>@deletevar) %>
 				</td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %></td>
