--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -97,8 +97,7 @@
 				<% end %>
 				</td>
 				<td>
-				<% @deletevar= "$(#delete-#{variant.id}).remove()" %>
-				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :onerror=>@deletevar) %>
+				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :onerror=>'this.remove()') %>
 				</td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %></td>
@@ -141,11 +140,5 @@ $('.cloudinary-fileupload').bind('cloudinarydone', function(e, data) {
 });
 $('.cloudinary-fileupload').bind('fileuploadprogress', function(e, data) { 
   $('.progress_bar').css('width', Math.round((data.loaded * 100.0) / data.total) + '%'); 
-})
-</script>
-<script type="text/javascript">
-$(img).onerror(function(){
-$()
-$(this).remove();
 })
 </script>
