--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -97,12 +97,15 @@
 				<% end %>
 				</td>
 				<td>
-				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :onerror=>'this.remove()') %>
+				<% @del= "delete-#{variant.id}" %>
+				<% @del2= "#@del" %>
+				
+				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :onerror=>'this.remove();@del2') %>
 				</td>
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %></td>
 			    <td>
-				<% @del= "delete-#{variant.id}" %>
+				
 				<%= link_to "Delete2", url_for(:controller => "home", :action => "destroyC", :vid => variant.id, :vtitle => variant.title,:pid=>@product.id), id: @del %>
 				</td>
 				</tr>
