--- a/app/views/home/product.html.erb
+++ b/app/views/home/product.html.erb
@@ -97,11 +97,11 @@
 				<% end %>
 				</td>
 				<td>
-				<% @del= "delete-#{variant.id}" %>
-				<% @del2= "#@del" %>
-				
-				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :onerror=>'this.remove();variant.id') %>
+				<% @del= "delete-#{variant.id}"%>
+				<% @img= "image-#{variant.id}"%>
+				<%= cl_image_tag("#{variant.id}",:width => 120, :height => 80, :id => @img,:onerror=>'this.remove()') %>
 				</td>
+				
 				<td><%= cl_image_upload_tag(:image_id,:format=>'png',:invalidate=>true,:public_id=>"#{variant.id}",:resource_type=>'image',:crop => :limit, :width => 1000, :height => 1000, 
                           :html => {:class => "image_upload"}) %></td>
 			    <td>
